fix overflow of cards

--- a/styles/Products.module.css
+++ b/styles/Products.module.css
@@ -26,7 +26,7 @@
   .cardParent{
    display: flex;
    height: 90vh;
-   overflow: auto;
+   overflow: auto !important;
       padding:2% ;
   }
 
